# proj-maker

./: .gitmodules  CMakeLists.txt  build.sh
src/: file_manager.c  file_manager.h  main.c
src/gui_editor/: main.c  main.h
